force-app/main/default/objects/Claim__c/Claim__c.object-meta.xml
<CustomObject>
    <description>This object is used to store Claim related data for a patient.</description>
    <label>Claim</label>
    <nameField>
        <displayFormat>CS{YYMMDD}{000000}</displayFormat>
        <label>Claim Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>