force-app/main/default/objects/Claim__c/fields/Accept_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Accept_Assignment__c</fullName>
    <description>Explain that they accept the Medicare-approved amount as the full payment for covered services.</description>
    <label>Accept Assignment</label>
    <length>150</length>
    <type>Text</type>
</CustomField>