force-app/main/default/objects/Claim__c/fields/Accident_State__c.field-meta.xml
<CustomField>
    <fullName>Accident_State__c</fullName>
    <description>Represents where an auto accident occurred.</description>
    <label>Accident State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>