force-app/main/default/objects/Claim__c/fields/Additional_Claim_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Claim_Information__c</fullName>
    <description>Used to store additional information related to claim.</description>
    <label>Additional Claim Information</label>
    <type>TextArea</type>
</CustomField>