force-app/main/default/objects/Claim__c/fields/Adjustment_Code__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Code__c</fullName>
    <description>Code used to communicate specific information about adjustments made to a healthcare claim.</description>
    <label>Adjustment Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CO</fullName>
                <label>CO-Contractual Obligation</label>
            </value>
            <value>
                <fullName>OA</fullName>
                <label>OA-Other Adjustment</label>
            </value>
            <value>
                <fullName>PI</fullName>
                <label>PI-Payor Initiated Reduction</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>PR- Patient Responsibility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>