force-app/main/default/objects/Claim__c/fields/Admission_Date__c.field-meta.xml
<CustomField>
    <fullName>Admission_Date__c</fullName>
    <description>Date when the patient was admitted to the facility.</description>
    <label>Admission Date</label>
    <type>Date</type>
</CustomField>