force-app/main/default/objects/Claim__c/fields/Admission_Hour__c.field-meta.xml
<CustomField>
    <fullName>Admission_Hour__c</fullName>
    <description>Time when the patient was admitted to the facility.</description>
    <label>Admission Hour</label>
    <type>Time</type>
</CustomField>