force-app/main/default/objects/Claim__c/fields/Admission_Source__c.field-meta.xml
<CustomField>
    <fullName>Admission_Source__c</fullName>
    <description>Refers to the origin or place from which a patient is admitted to a healthcare facility, such as a hospital.</description>
    <label>Admission Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>