force-app/main/default/objects/Claim__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <description> Provides information about the nature of the admission and is often used for administrative, billing, and coding purposes.</description>
    <label>Admission Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>