force-app/main/default/objects/Claim__c/fields/Admitting_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Admitting_Diagnosis_Code__c</fullName>
    <description>Refers to the specific code used to represent the primary reason or condition for a patient's admission to a healthcare facility</description>
    <label>Admitting Diagnosis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>