force-app/main/default/objects/Claim__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <description>Total amount paid by the primary payer for the services rendered.</description>
    <inlineHelpText>Please use numbers between 1-9 only</inlineHelpText>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>