force-app/main/default/objects/Claim__c/fields/Amount_Status__c.field-meta.xml
<CustomField>
    <fullName>Amount_Status__c</fullName>
    <description>Represents the payment status.</description>
    <label>Amount Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Not Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>