force-app/main/default/objects/Claim__c/fields/Any_Other_Health_Benefit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Health_Benefit_Plan__c</fullName>
    <description>If the patient has coverage through another health insurance plan or not.</description>
    <defaultValue>false</defaultValue>
    <label>Any Other Health Benefit Plan</label>
    <type>Checkbox</type>
</CustomField>