force-app/main/default/objects/Claim__c/fields/Assignment_of_benefit_certificate_A__c.field-meta.xml
<CustomField>
    <fullName>Assignment_of_benefit_certificate_A__c</fullName>
    <description>Legal document that allows healthcare providers to receive direct payment for services from a patient's insurance company.</description>
    <label>Assignment of benefit certificate A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>