force-app/main/default/objects/Claim__c/fields/Assignment_of_benefit_certificate_B__c.field-meta.xml
<CustomField>
    <fullName>Assignment_of_benefit_certificate_B__c</fullName>
    <description>Specific document used to record and formalize the assignment of benefits.</description>
    <label>Assignment of benefit certificate B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>