force-app/main/default/objects/Claim__c/fields/Assignment_of_benefit_certificate_C__c.field-meta.xml
<CustomField>
    <fullName>Assignment_of_benefit_certificate_C__c</fullName>
    <description>Legal and binding agreement between the patient and the healthcare provider.</description>
    <label>Assignment of benefit certificate C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>