force-app/main/default/objects/Claim__c/fields/Attending_Provider_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Attending_Provider_FirstName__c</fullName>
    <description>Indicates the First Name of the attending provider.</description>
    <label>Attending Provider FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>