force-app/main/default/objects/Claim__c/fields/Attending_Provider_LastName__c.field-meta.xml
<CustomField>
    <fullName>Attending_Provider_LastName__c</fullName>
    <description>Indicates the Last Name of the attending provider.</description>
    <label>Attending Provider LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>