force-app/main/default/objects/Claim__c/fields/Attending_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Attending_Provider_NPI__c</fullName>
    <description>10-digit National Provider Identifier (NPI) of the attending provider.</description>
    <label>Attending Provider NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>