force-app/main/default/objects/Claim__c/fields/Attending_Provider_Qualifying_Id__c.field-meta.xml
<CustomField>
    <fullName>Attending_Provider_Qualifying_Id__c</fullName>
    <description>Refers to a unique identifier associated with the attending provider who is responsible for the care and treatment of a patient.</description>
    <label>Attending Provider Qualifying ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>