force-app/main/default/objects/Claim__c/fields/Auto_Accident_Related__c.field-meta.xml
<CustomField>
    <fullName>Auto_Accident_Related__c</fullName>
    <description>Represents where an auto accident occurred</description>
    <label>Place of auto Accident</label>
    <length>100</length>
    <type>Text</type>
</CustomField>