force-app/main/default/objects/Claim__c/fields/Bill_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_Phone__c</fullName>
    <description>Used to store Phone of billing provider.</description>
    <label>Bill Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>