force-app/main/default/objects/Claim__c/fields/bill_taxid__c.field-meta.xml
<CustomField>
    <fullName>bill_taxid__c</fullName>
    <label>Bill_tax ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>