force-app/main/default/objects/Claim__c/fields/Billing_Provider_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Address_2__c</fullName>
    <description>Include the street address of the billing provider.</description>
    <label>Billing Provider Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>