force-app/main/default/objects/Claim__c/fields/Billing_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_City__c</fullName>
    <description>Indicates the City of the Billing Providers Location.</description>
    <label>Billing Provider City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>