force-app/main/default/objects/Claim__c/fields/Billing_Provider_Info__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Info__c</fullName>
    <description>Indicates standardized identification of Billing Provider</description>
    <label>Billing Provider Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>