force-app/main/default/objects/Claim__c/fields/Billing_Provider_Info_NPI__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Info_NPI__c</fullName>
    <description>Indicates standardized identification of Billing Provider</description>
    <label>Billing Provider Info- NPI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>