force-app/main/default/objects/Claim__c/fields/Billing_Provider_Legacy_ID_Provider_Lice__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Legacy_ID_Provider_Lice__c</fullName>
    <label>Billing Provider Legacy ID/Provider Lice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>