force-app/main/default/objects/Claim__c/fields/Billing_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Name__c</fullName>
    <description>Name of the Billing Provider</description>
    <label>Billing Provider Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>