force-app/main/default/objects/Claim__c/fields/Billing_Provider_Other_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Other_ID__c</fullName>
    <description>Any additional identification number or code assigned to the billing provider</description>
    <label>Billing Provider Other ID</label>
    <type>TextArea</type>
</CustomField>