force-app/main/default/objects/Claim__c/fields/Billing_Provider_Other_ID_B__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Other_ID_B__c</fullName>
    <description>Signifies a specific enumeration within the NPI standard used for identifying the billing provider.</description>
    <label>Billing Provider Other ID B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>