force-app/main/default/objects/Claim__c/fields/Billing_Provider_Other_ID_C__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Other_ID_C__c</fullName>
    <description> Specific type  of identifier associated with the billing provider.</description>
    <label>Billing Provider Other ID C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>