force-app/main/default/objects/Claim__c/fields/Billing_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_State__c</fullName>
    <description>Indicates the State of the billing provider location.</description>
    <label>Billing Provider State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>