force-app/main/default/objects/Claim__c/fields/Billing_Provider_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Tax_ID__c</fullName>
    <description>Taxpayer Identification Number (TIN) or Employer Identification Number (EIN) of the billing provider</description>
    <label>Billing Provider Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>