force-app/main/default/objects/Claim__c/fields/Billing_Provider_Tax_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Tax_ID_Type__c</fullName>
    <description>Indicates the Category under which the Tax Id falls.</description>
    <label>Billing Provider Tax ID Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>