force-app/main/default/objects/Claim__c/fields/Billing_Provider_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Taxonomy__c</fullName>
    <description>A unique code that identifies the provider's type and specialty in the healthcare system.</description>
    <label>Billing Provider Taxonomy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>