force-app/main/default/objects/Claim__c/fields/Billing_Provider_Zip__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Zip__c</fullName>
    <description>Indicates the ZIP Code of the billing provider's location.</description>
    <label>Billing Provider Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>