force-app/main/default/objects/Claim__c/fields/Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount__c</fullName>
    <description>Indicates the total charge for the procedures provided by the healthcare provider.</description>
    <label>Charge Amount</label>
    <length>100</length>
    <type>Text</type>
</CustomField>