force-app/main/default/objects/Claim__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <description>Represents self relationship.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Claim</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>