force-app/main/default/objects/Claim__c/fields/Claim_Code_Options__c.field-meta.xml
<CustomField>
    <fullName>Claim_Code_Options__c</fullName>
    <description>The 'Claim Codes' identify additional information about the patient’s condition or the claim.</description>
    <label>Claim Code Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>