force-app/main/default/objects/Claim__c/fields/Claim_Codes__c.field-meta.xml
<CustomField>
    <fullName>Claim_Codes__c</fullName>
    <description>The 'Claim Codes' identify additional information about the patient’s condition or the claim.</description>
    <inlineHelpText>The &apos;Claim Codes&apos; identify additional information about the patient’s condition or the claim.</inlineHelpText>
    <label>Claim Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>