force-app/main/default/objects/Claim__c/fields/Claim_Md_Id__c.field-meta.xml
<CustomField>
    <fullName>Claim_Md_Id__c</fullName>
    <description>Used to store batchid attribute coming from ClaimMD.</description>
    <label>Claim Md ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>