force-app/main/default/objects/Claim__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <description>Represents the current status of claim processing.</description>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
                <default>true</default>
                <label>Saved</label>
            </value>
            <value>
                <fullName>Ready to Submit</fullName>
            </value>
            <value>
                <fullName>Sent to Clearing house</fullName>
            </value>
            <value>
                <fullName>Clearing house accepted</fullName>
            </value>
            <value>
                <fullName>Clearing house rejected</fullName>
            </value>
            <value>
                <fullName>Payer Accepted</fullName>
            </value>
            <value>
                <fullName>Payer Rejected</fullName>
            </value>
            <value>
                <fullName>ERA Received</fullName>
            </value>
            <value>
                <fullName>Claim Validation Error</fullName>
            </value>
            <value>
                <fullName>Paid and Patient Responsibility</fullName>
            </value>
            <value>
                <fullName>Paid and resolved</fullName>
            </value>
            <value>
                <fullName>Paid with Patient Responsibility – Ready to submit Secondary Insurance</fullName>
            </value>
            <value>
                <fullName>Overpaid</fullName>
            </value>
            <value>
                <fullName>Underpaid</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Paid and patient responsibility with Secondary</fullName>
            </value>
            <value>
                <fullName>ERA Received - Transferred to Secondary</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Generated</fullName>
                <isActive>false</isActive>
                <label>Generated</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
                <isActive>false</isActive>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Processed</fullName>
                <isActive>false</isActive>
                <label>Processed</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <isActive>false</isActive>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Transmitted</fullName>
                <isActive>false</isActive>
                <label>Transmitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>