force-app/main/default/objects/Claim__c/fields/Claimid__c.field-meta.xml
<CustomField>
    <fullName>Claimid__c</fullName>
    <description>Used to store batchid attribute coming from ClaimMD.</description>
    <label>Claim ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>