force-app/main/default/objects/Claim__c/fields/Code_Code_Field_Qualifiers_A__c.field-meta.xml
<CustomField>
    <fullName>Code_Code_Field_Qualifiers_A__c</fullName>
    <description>Used to convey specific information about procedures, diagnoses, and other aspects of patient care.</description>
    <label>Code-Code Field/Qualifiers A</label>
    <length>255</length>
    <type>Text</type>
</CustomField>