force-app/main/default/objects/Claim__c/fields/Color2__c.field-meta.xml
<CustomField>
    <fullName>Color2__c</fullName>
    <description>Used to display flag according to priority.</description>
    <formula>IMAGE( 
CASE( Priority__c, 
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Critical&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <label>Color</label>
    <type>Text</type>
</CustomField>