force-app/main/default/objects/Claim__c/fields/Conditional_Codes_F__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Codes_F__c</fullName>
    <description>Indicate a change or correction to a claim.</description>
    <label>Conditional Codes F</label>
    <length>255</length>
    <type>Text</type>
</CustomField>