force-app/main/default/objects/Claim__c/fields/Date_Of_Current_Illness__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Current_Illness__c</fullName>
    <description>Date when the patient's current symptoms or illness began.</description>
    <label>Date Of Current Illness</label>
    <type>Date</type>
</CustomField>