force-app/main/default/objects/Claim__c/fields/Dates_Patient_Unable_To_Work__c.field-meta.xml
<CustomField>
    <fullName>Dates_Patient_Unable_To_Work__c</fullName>
    <description>Date during which patient is unable to work in their current occupation due to the illness.</description>
    <label>Dates Patient Unable To Work</label>
    <type>Date</type>
</CustomField>