force-app/main/default/objects/Claim__c/fields/Diag_12__c.field-meta.xml
<CustomField>
    <fullName>Diag_12__c</fullName>
    <description>Diagnosis code that corresponds to the reason for the procedure.</description>
    <label>Diag_12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>