force-app/main/default/objects/Claim__c/fields/Diagnosis_A__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_A__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis A</label>
    <type>TextArea</type>
</CustomField>