force-app/main/default/objects/Claim__c/fields/Diagnosis_B__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_B__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis B</label>
    <type>TextArea</type>
</CustomField>