force-app/main/default/objects/Claim__c/fields/Diagnosis_C__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_C__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis C</label>
    <type>TextArea</type>
</CustomField>