force-app/main/default/objects/Claim__c/fields/Diagnosis_D__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_D__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis D</label>
    <type>TextArea</type>
</CustomField>