force-app/main/default/objects/Claim__c/fields/Diagnosis_E__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_E__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis E</label>
    <type>TextArea</type>
</CustomField>