force-app/main/default/objects/Claim__c/fields/Diagnosis_F__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_F__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis F</label>
    <type>TextArea</type>
</CustomField>