force-app/main/default/objects/Claim__c/fields/Diagnosis_G__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_G__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis G</label>
    <type>TextArea</type>
</CustomField>