force-app/main/default/objects/Claim__c/fields/Diagnosis_H__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_H__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis H</label>
    <type>TextArea</type>
</CustomField>