force-app/main/default/objects/Claim__c/fields/Diagnosis_I__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_I__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis I</label>
    <type>TextArea</type>
</CustomField>