force-app/main/default/objects/Claim__c/fields/Diagnosis_J__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_J__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis J</label>
    <type>TextArea</type>
</CustomField>