force-app/main/default/objects/Claim__c/fields/Diagnosis_K__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_K__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis K</label>
    <type>TextArea</type>
</CustomField>