force-app/main/default/objects/Claim__c/fields/Diagnosis_L__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_L__c</fullName>
    <description>Indicates the applicable ICD code for the Claim.</description>
    <label>Diagnosis L</label>
    <type>TextArea</type>
</CustomField>