force-app/main/default/objects/Claim__c/fields/Diagnosis_Procedure_Code_Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Procedure_Code_Qualifier__c</fullName>
    <label>Diagnosis/Procedure Code Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>