force-app/main/default/objects/Claim__c/fields/Diagnosis_Reference__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Reference__c</fullName>
    <label>Diagnosis Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>