force-app/main/default/objects/Claim__c/fields/Discharge_Hour__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Hour__c</fullName>
    <description>Refers to the specific time at which a patient is officially discharged from a healthcare facility.</description>
    <label>Discharge Hour</label>
    <type>Time</type>
</CustomField>