force-app/main/default/objects/Claim__c/fields/Document_Control_Number_C__c.field-meta.xml
<CustomField>
    <fullName>Document_Control_Number_C__c</fullName>
    <description> Serves as a unique identifier for tracking and managing documents related to the healthcare claim.</description>
    <label>Document Control Number C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>