force-app/main/default/objects/Claim__c/fields/Employer_Name_C__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_C__c</fullName>
    <description>Employment-related injuries, or information regarding third-party liability.</description>
    <label>Employer Name C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>