force-app/main/default/objects/Claim__c/fields/Employment_Related__c.field-meta.xml
<CustomField>
    <fullName>Employment_Related__c</fullName>
    <description>Used to indicate that the patient's condition or the healthcare services provided are associated with their employment.</description>
    <inlineHelpText>Y=Yes
N=No</inlineHelpText>
    <label>Employment Related</label>
    <length>100</length>
    <type>Text</type>
</CustomField>